[package]
name = "baidu_yunpan_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.11", features = ["json", "stream","multipart"] }  # 同步+异步支持
tokio = { version = "1.0", features = ["full"] }  # 异步运行时
urlencoding = "2.1.3"
url = "2.5.4"
md5 = "0.7.0"
bytes = "1.10.1"
clap = { version = "4.0", features = ["derive"] }
